--- a/templates/tag-pills.html
+++ b/templates/tag-pills.html
@@ -1,8 +1,10 @@
 <div class="featured-tags">
     {% for tag in tags %}
-    <a class="pill" href="{{url_for('threads.tag', id=tag.name) }}">
-        <span class="pill-label">{{ tag.statuses_count }}</span>
+    <a class="hashtag pill" href="{{url_for('threads.tag', id=tag.name) }}">
         {{ tag.name }}
+        {% if tag.statuses_count is defined %}
+        <span class="pill-label">{{ tag.statuses_count }}</span>
+        {% endif %}
     </a>
     {% endfor %}
 </div>
