--- a/static/pills.css
+++ b/static/pills.css
@@ -3,18 +3,18 @@
   & .pill {
     border-radius: 5px;
     border: 1px solid;
-    border-color: rgba(197, 209, 222, 0.25);
-    background-color: rgba(197, 209, 222, 0.15);
+    border-color: var(--border-color-light);
+    background-color: var(--bg-light);
     margin-bottom: 0.5em;
-    padding: 0.25em 1em;
+    padding: 0.25em 0.5em;
     display: inline-block;
     font-size: var(--font-size-sm);
     color: var(--text-color-dark-faded);
     text-decoration: none;
 
     &:hover {
-      color: var(--color-link);
-      border: 1px solid var(--color-link);
+      color: var(--color-brand-blue-3);
+      border: 1px solid var(--color-brand-blue-3);
     }
 
     & .pill-label {
@@ -32,8 +32,8 @@
     & .pill {
       color: var(--text-color-light-faded);
       border: 1px solid;
-      border-color: rgba(0, 0, 0, 0.25);
-      background-color: rgba(0, 0, 0, 0.15);
+      border-color: var(--border-color-dark);
+      background-color: var(--bg-dark);
       text-decoration: none;
 
       &:hover {
@@ -44,12 +44,24 @@
   }
 }
 
-.featured-tags .pill {
-  color: var(--text-color-dark);
+.featured-tags {
+  & strong small {
+    color: var(--text-color-dark-faded);
+  }
+
+  & .pill {
+    color: var(--text-color-dark);
+  }
 }
 
 @media (prefers-color-scheme: dark) {
-  .featured-tags .pill {
-    color: var(--text-color-light);
+  .featured-tags {
+    & strong small {
+      color: var(--text-color-light-faded);
+    }
+
+    & .pill {
+      color: var(--text-color-light);
+    }
   }
 }
