--- a/templates/_tag.html
+++ b/templates/_tag.html
@@ -18,14 +18,6 @@
   <meta property="og:site_name" content="{{ app.site_name }}" />
   <meta property="og:title" content="{{ app.title }} / {{ tag }}" />
 
-  {% include "import-map.html" %}
-
-  <!-- Use parent app's variables & reset stylesheets -->
-  <link rel="stylesheet" href="{{ url_for('static', filename='variables.css') }}" />
-  <link rel="stylesheet" href="{{ url_for('static', filename='reset.css') }}" />
-
-  <!-- threads specific static css-->
-  <link rel="stylesheet" href="{{ url_for('threads.static', filename='pills.css') }}" />
 
   <style>
     html {
@@ -39,7 +31,6 @@
       color: var(--text-color-dark);
       font-size: var(--font-size-base);
       display: grid;
-      padding: 0 1em;
       gap: 1em;
 
       a {
@@ -143,6 +134,15 @@
       }
     }
   </style>
+
+  <!-- Use parent app's variables & reset stylesheets -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='variables.css') }}" />
+  <link rel="stylesheet" href="{{ url_for('static', filename='reset.css') }}" />
+
+  <!-- threads specific static css-->
+  {% include "styles.html" %}
+
+  {% include "import-map.html" %}
 </head>
 
 <body>
@@ -161,7 +161,7 @@
     {% endwith %}
     {% endif %} -->
     <div class="back">
-      <a href="{{url_for('threads.home')}}">Back</a>
+      <a class="btn" href="{{url_for('threads.home')}}">&larr; Back</a>
     </div>
     <h2>{{ tag }}</h2>
     {% for thread in threads %}
@@ -176,7 +176,7 @@
     {% endfor %}
     {% endif %}
     {% endfor %}
-    <a href="#top">Top</a>
+    <a class="btn" href="#top">&uarr; Top</a>
   </main>
   <footer>
     <p>
