style: add padding on body & card bottom-menu

--- a/templates/_home.html
+++ b/templates/_home.html
@@ -31,6 +31,7 @@
       font-size: var(--font-size-base);
       display: grid;
       gap: 1em;
+      padding: 0 1em;
 
       a {
         color: var(--color-link);
