--- a/templates/_tag.html
+++ b/templates/_tag.html
@@ -32,6 +32,7 @@
       font-size: var(--font-size-base);
       display: grid;
       gap: 1em;
+      padding: 0 1em;
 
       a {
         color: var(--color-link);
