--- a/static/card.css
+++ b/static/card.css
@@ -31,6 +31,9 @@
       border-radius: 5px;
       display: inline-block;
       vertical-align: text-bottom;
+      overflow-x: auto;
+      overflow-wrap: initial;
+      max-width: 100%;
     }
 
     & a:has(.link-card) {
