--- a/templates/_home.html
+++ b/templates/_home.html
@@ -196,7 +196,7 @@
     <p>Rendered on {{ render_date }} in Europe/Amsterdam</p>
   </footer>
 
-  <script type="module">
+  <script defer type="module">
     import TimeAgo from "https://esm.sh/v135/@github/relative-time-element@4.4.0/es2022/relative-time.js"
     customElements.define('relative-time', TimeAgo)
   </script>
