perf: defer enhance-content script

--- a/templates/_home.html
+++ b/templates/_home.html
@@ -200,7 +200,7 @@
     import TimeAgo from "https://esm.sh/v135/@github/relative-time-element@4.4.0/es2022/relative-time.js"
     customElements.define('relative-time', TimeAgo)
   </script>
-  <script type="module" src="{{ url_for('threads.static', filename='enhance-content.js') }}">
+  <script defer type="module" src="{{ url_for('threads.static', filename='enhance-content.js') }}">
   </script>
 </body>
 
